cadastrando o cliente com sucesso e exibindo mensagem para o usuário

--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -12,6 +12,7 @@
 </h:head>
 
 	<h:body>
+		<p:growl id="msgGlobal" life="2000"/>
 		<p:layout fullPage="true">
         	<p:layoutUnit position="north">
         		<ui:insert name="menu"/>        	
