bugs do primefaces resolvidos, classe produto e pŕodutoDao adicionadas. tudo funcionando

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -13,7 +13,7 @@
 			</p:submenu>
 			
 			<p:submenu label="Cadastros">
-				<p:menuitem value="Clientes" action="cliente"/>
+				<p:menuitem value="Clientes" outcome="/pages/cliente"/>
 				<p:menuitem value="Produtos"/>
 			</p:submenu>
 			
