página de produtos criada, com filtros funcionando e managedbean

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -13,8 +13,8 @@
 			</p:submenu>
 			
 			<p:submenu label="Cadastros">
-				<p:menuitem value="Clientes" outcome="/pages/cliente"/>
-				<p:menuitem value="Produtos"/>
+				<p:menuitem value="Clientes" outcome="/pages/cliente.xhtml"/>
+				<p:menuitem value="Produtos" outcome="/pages/produto.xhtml"/>
 			</p:submenu>
 			
 			<p:submenu label="Ajuda">
