funções de cadastrar, remover e editar produtos funcionando perfeitamente

--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -9,7 +9,7 @@
 	<h:form>
 		<p:menubar>
 			<p:submenu label="Arquivo">
-				<p:menuitem value="Sair" action="index"/>
+				<p:menuitem value="Sair" outcome="/pages/index.xhtml"/>
 			</p:submenu>
 			
 			<p:submenu label="Cadastros">
